--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://0-Black-Roses-0.github.io/admin-dashboard",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -37,11 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-
-  "homepage": "https://0-Black-Roses-0.github.io/admin-dashboard",
-  "script": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
   }
 }
